--- a/src/main/resources/templates/todos.html
+++ b/src/main/resources/templates/todos.html
@@ -9,8 +9,8 @@
     </form>
     <hr>
     <ul>
-<!--      <li th:each="todo: ${todos}">-->
-<!--        <span th:text="${todo}"></span>-->
-<!--      </li>-->
+      <li th:each="todo: ${todos}">
+        <span th:text="${todo.todo}"></span>
+      </li>
     </ul>
 </html>
